--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgb(127, 31, 252);
+}
 .introducao{
     display: flex;
     flex-direction: row;
@@ -8,14 +11,23 @@ div.introducao > div{
     max-width: 400px;
     margin: 10px;
     padding: 20px;
-    background-color: gray;
+    background-color: rgb(160, 160, 160);
 }
 h2{
     font-size: 200%;
     text-align: center;
 }
-img{
+.center{
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+p{
+    font-size: 24px;
+    text-align: justify;
+}
+button.pesquisar{
+    width: 175px;
+    height: 50px;
+    font-size: 24px;
 }
