--- a/style.css
+++ b/style.css
@@ -8,10 +8,13 @@ body{
     width: 100%;
 }
 div.introducao > div{
-    max-width: 400px;
+    max-width: 450px;
     margin: 10px;
     padding: 20px;
-    background-color: rgb(160, 160, 160);
+    background-color: rgb(150, 150, 150);
+    border: solid;
+    border-width: 3px;
+    border-color: white;
 }
 h2{
     font-size: 200%;
@@ -30,4 +33,9 @@ button.pesquisar{
     width: 175px;
     height: 50px;
     font-size: 24px;
+}
+img.whiteborder{
+    border: solid;
+    border-color: white;
+    border-width: 2px;
 }
