--- a/csspadrao.css
+++ b/csspadrao.css
@@ -21,6 +21,7 @@ p{
     text-align: justify;
     margin-left: 24px;
     margin-right: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 div.content{
     width: 80%; 
