removendo a margen das div

--- a/csspadrao.css
+++ b/csspadrao.css
@@ -18,6 +18,7 @@ img.whiteborder{
 }
 body{
     background-color: rgb(127, 31, 252);
+    margin-top: 0;
 }
 p{
     font-size: 24px;
@@ -29,4 +30,8 @@ p{
 div.content{
     width: 80%; 
     background-color: rgb(150, 150, 150); 
+    padding-top: 0;
+    border: solid;
+    border-width: 3px;
+    border-color: white;
 }
