--- a/Siteinicial/style.css
+++ b/Siteinicial/style.css
@@ -4,7 +4,7 @@
     justify-content: space-evenly;
     width: 100%;
     flex-wrap: wrap;
-    /*align-items: baseline;*/
+    align-items: baseline;
 }
 div.introducao > div{
     max-width: 450px;
